[gd_scene load_steps=3 format=4 uid="uid://ch1hh04p5qvav"]

[ext_resource type="Script" uid="uid://b6yai0r5k5i06" path="res://Prefab/GUI/LevelEditor/Inspector/Properties/Type/Base/PropertiesBase.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cytbp1b5wp23a" path="res://Asset/Icon/IconClose.svg" id="2"]

[node name="PropertiesBase" type="PanelContainer"]
offset_right = 218.0
offset_bottom = 99.0
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CloseButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("2")

[connection signal="pressed" from="HBoxContainer/CloseButton" to="." method="CloseButtonPressed"]
